added needed dependencies for forum